# django-redis-iplweb

./: setup.cfg
.github/workflows/: ci.yml
changelog.d/: 787.bugfix
django_redis/: __init__.py  cache.py
tests/: test_backend.py
