[metadata]
name = django-redis
version = attr: django_redis.__version__
url = https://github.com/jazzband/django-redis
author = Andrei Antoukh
author_email = niwi@niwi.nz
description = Full featured redis cache backend for Django.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.2
    Framework :: Django :: 6.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
python_requires = >=3.11
packages =
    django_redis
    django_redis.client
    django_redis.client.mixins
    django_redis.serializers
    django_redis.compressors
install_requires =
    Django>=5.2,<6.1
    redis>=4.0.2

[options.extras_require]
hiredis = redis[hiredis]>=4.0.2

[coverage:run]
omit =
    tests/*,

[coverage:report]
precision = 1
skip_covered = true

[tox:tox]
minversion = 3.15.0
envlist =
    ruff
    mypy
    # tests against released versions
    py{311,312,313,314}-dj52-redislatest
    py{312,313,314}-dj60-redislatest
    # tests against unreleased versions
    py314-dj60-redismaster
    py314-djmain-redis{latest,master}

[gh-actions]
python =
    3.11: py311, ruff, mypy
    3.12: py312
    3.13: py313
    3.14: py314

[gh-actions:env]
DJANGO =
    5.2: dj52
    6.0: dj60
    main: djmain
REDIS =
    latest: redislatest
    master: redismaster

[testenv]
passenv = CI, GITHUB*
commands =
  {envpython} -m pytest -n 4 {posargs}

deps =
    dj52: Django>=5.2,<6.0
    dj60: Django>=6.0,<6.1
    djmain: https://github.com/django/django/archive/main.tar.gz
    msgpack>=0.6.0
    pytest
    pytest-cov
    pytest-mock
    pytest-pythonpath
    pytest-xdist
    redismaster: https://github.com/redis/redis-py/archive/master.tar.gz
    lz4>=0.15
    pyzstd>=0.15

[testenv:{pre-commit,mypy}]
basepython = python3
envdir={toxworkdir}/lint
commands =
    pre-commit: pre-commit run --all-files
    mypy: mypy {posargs:--cobertura-xml-report .} django_redis tests
deps =
    django-stubs
    lxml
    pre-commit
    mypy
    # typing dependencies
    pytest
    pytest-mock
    types-redis
skip_install = true

[tool:pytest]
addopts =
    --doctest-modules
    --cov=django_redis
    --cov-config=setup.cfg
    --no-cov-on-fail
pythonpath = tests
testpaths = tests
xfail_strict = true

[mypy]
plugins =
    mypy_django_plugin.main
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[mypy.plugins.django-stubs]
# all test settings look similar enough for mypy
django_settings_module = tests.settings.sqlite
ignore_missing_settings = true

# third party mypy config
[mypy-lz4.frame]
ignore_missing_imports = true

[mypy-xdist.scheduler]
ignore_missing_imports = true

[mypy-pyzstd]
ignore_missing_imports = true

[mypy-msgpack]
ignore_missing_imports = true

[mypy-redis.sentinel]
ignore_missing_imports = true
